# Notice_board

./: .floo  .flooignore  CMakeLists.txt  Dockerfile  JSONParser.cpp  JSONParser.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  RequestHandler.cpp  RequestHandler.h  client.cpp  client.h  database.cpp  database.h  server.cpp  server.h  service_manager.sh
.github/workflows/: cpp-cmake.yml
Initializers/: Dockerfile.app  Dockerfile.pg  psql_dump.sql  service_manager.sh
TIN/: sock_client1.c
Test/: server.rb
Tests/: JSONParserTest.cpp  RequestHandlerTest.cpp  databaseTest.cpp
sockets/: client.cpp  client.h  server.cpp  server.h
sockets/communication/: JSONParser.cpp  JSONParser.h  Message.cpp  Message.h
sockets/database/: database.cpp  database.h
